--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -192,7 +192,7 @@
               <p>Data de Cadastro: ${usuario.dataHoraCadastro}</p>
               ${usuario.role === 'professor' ? `<div id="turmas-${uid}">${listarTurmas(uid)}</div>` : ''}
               <button onclick="editarUsuario('${uid}')">Editar</button>
-              <button onclick="confirmarExclusao('${uid}')">Excluir</button>
+              <button onclick="confirmarExclusaoUsuario('${uid}')">Excluir</button>
               ${usuario.role === 'professor' ? `<button onclick="cadastrarTurma('${uid}')">Adicionar Turma</button>` : ''}
             </div>`;
           }
@@ -202,6 +202,36 @@
       });
     }
 
+    // Função para editar usuário
+    function editarUsuario(uid) {
+      db.ref('usuarios/' + uid).once('value').then(snapshot => {
+        const usuario = snapshot.val();
+        const novoNome = prompt("Edite o nome:", usuario.nome);
+        const novoTelefone = prompt("Edite o telefone:", usuario.telefone);
+        const novoTipo = prompt("Edite o tipo (aluno, professor, visitante, proprietário):", usuario.role);
+        if (novoNome && novoTelefone && novoTipo) {
+          db.ref('usuarios/' + uid).update({
+            nome: novoNome,
+            telefone: novoTelefone,
+            role: novoTipo
+          });
+          alert("Usuário atualizado com sucesso.");
+          buscarUsuarios();
+        }
+      });
+    }
+
+    // Função para confirmar exclusão de usuário
+    function confirmarExclusaoUsuario(uid) {
+      if (confirm("Tem certeza de que deseja excluir este usuário?")) {
+        db.ref('usuarios/' + uid).remove().then(() => {
+          alert("Usuário excluído com sucesso.");
+          buscarUsuarios();
+        });
+      }
+    }
+
+    // Funções relacionadas às turmas dos professores
     function listarTurmas(uid) {
       db.ref(`usuarios/${uid}/turmas`).once('value').then(snapshot => {
         let turmasHTML = '<h4>Turmas:</h4><ul>';
