--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -191,6 +191,7 @@
               <p>Telefone: ${usuario.telefone}</p>
               <p>Data de Cadastro: ${usuario.dataHoraCadastro}</p>
               ${usuario.role === 'professor' ? `<div id="turmas-${uid}">${listarTurmas(uid)}</div>` : ''}
+              ${usuario.role === 'aluno' ? `<button onclick="verProgresso('${uid}')">Ver Progresso</button>` : ''}
               <button onclick="editarUsuario('${uid}')">Editar</button>
               <button onclick="confirmarExclusaoUsuario('${uid}')">Excluir</button>
               ${usuario.role === 'professor' ? `<button onclick="cadastrarTurma('${uid}')">Adicionar Turma</button>` : ''}
@@ -199,6 +200,23 @@
         }
         
         document.getElementById('resultados').innerHTML = html;
+      });
+    }
+
+    // Função para visualizar o progresso do aluno
+    function verProgresso(uid) {
+      db.ref(`usuarios/${uid}/progresso`).once('value', snapshot => {
+        const progresso = snapshot.val();
+        let progressoHTML = `<h3>Progresso do Aluno</h3><ul>`;
+        for (let nivel in progresso) {
+          progressoHTML += `<li>Nível ${nivel}</li><ul>`;
+          for (let unidade in progresso[nivel]) {
+            progressoHTML += `<li>Unidade ${unidade}: ${progresso[nivel][unidade]}</li>`;
+          }
+          progressoHTML += `</ul>`;
+        }
+        progressoHTML += `</ul>`;
+        document.getElementById('progressoAluno').innerHTML = progressoHTML;
       });
     }
 
