--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -228,7 +228,7 @@
       });
 
       // Função para buscar usuários por tipo
-      function buscarUsuarios() {
+      window.buscarUsuarios = function() {
         const filtroTipo = document.getElementById('filtroTipo').value;
         db.ref('usuarios').once('value', snapshot => {
           const resultados = snapshot.val();
@@ -248,9 +248,7 @@
           
           document.getElementById('resultados').innerHTML = html;
         });
-      }
-      
-      window.buscarUsuarios = buscarUsuarios;
+      };
     });
   </script>
 </body>
