--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -298,15 +298,26 @@
         }
       };
 
-      // Outras funções de progresso, edição e exclusão
+      // Funções relacionadas ao progresso do aluno
       window.verProgresso = function(uid) {
-        // Função já implementada anteriormente
-      };
-      window.editarUsuario = function(uid) {
-        // Função já implementada anteriormente
-      };
-      window.confirmarExclusaoUsuario = function(uid) {
-        // Função já implementada anteriormente
+        db.ref(`usuarios/${uid}/progresso`).once('value', snapshot => {
+          const progresso = snapshot.val();
+          let progressoHTML = `<h3>Progresso do Aluno</h3><ul>`;
+          for (let nivel in progresso) {
+            progressoHTML += `<li><strong>Nível ${nivel}</strong><ul>`;
+            for (let unidade in progresso[nivel]) {
+              progressoHTML += `<li>Unidade ${unidade}: <ul>`;
+              for (let fase in progresso[nivel][unidade]) {
+                const status = progresso[nivel][unidade][fase] ? 'Completo' : 'Incompleto';
+                progressoHTML += `<li>Fase ${fase}: ${status}</li>`;
+              }
+              progressoHTML += `</ul></li>`;
+            }
+            progressoHTML += `</ul></li>`;
+          }
+          progressoHTML += `</ul>`;
+          document.getElementById('progressoAluno').innerHTML = progressoHTML;
+        });
       };
     });
   </script>
