--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -220,6 +220,7 @@
           .then(() => {
             alert("Usuário cadastrado com sucesso!");
             document.getElementById('cadastroForm').reset();
+            buscarUsuarios(); // Atualiza a lista após salvar ou editar
           })
           .catch(error => {
             console.error("Erro ao cadastrar usuário:", error);
@@ -297,7 +298,30 @@
           });
         }
       };
-
+   // Função para excluir um usuário
+      window.confirmarExclusaoUsuario = function(uid) {
+        if (confirm("Tem certeza de que deseja excluir este usuário?")) {
+          db.ref('usuarios/' + uid).remove().then(() => {
+            alert("Usuário excluído com sucesso.");
+            **buscarUsuarios(); // Atualiza a lista após a exclusão**
+          });
+        }
+      };
+   // Função para editar um usuário
+      window.editarUsuario = function(uid) {
+        db.ref('usuarios/' + uid).once('value').then(snapshot => {
+          const usuario = snapshot.val();
+          const novoNome = prompt("Edite o nome:", usuario.nome);
+          const novoTelefone = prompt("Edite o telefone:", usuario.telefone);
+          const novoTipo = prompt("Edite o tipo (aluno, professor, visitante, proprietário):", usuario.role);
+          if (novoNome && novoTelefone && novoTipo) {
+            db.ref('usuarios/' + uid).update({
+              nome: novoNome,
+              telefone: novoTelefone,
+              role: novoTipo
+            }).then(() => {
+              alert("Usuário atualizado com sucesso.");
+              buscarUsuarios(); // Atualiza a lista após a edição**
       // Funções relacionadas ao progresso do aluno
       window.verProgresso = function(uid) {
         db.ref(`usuarios/${uid}/progresso`).once('value', snapshot => {
