--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -81,47 +81,52 @@
       const db = firebase.database();
 
       // Função para cadastrar um novo usuário
-      document.getElementById('cadastroForm').addEventListener('submit', function(e) {
-        e.preventDefault();
-        
-        const email = document.getElementById('email').value;
-        const senha = document.getElementById('senha').value;
-        const nome = document.getElementById('nome').value;
-        const telefone = document.getElementById('telefone').value;
-        const tipo = document.getElementById('tipo').value;
-        const dataHora = new Date().toLocaleString();
-        const feedback = document.getElementById('feedback');
-        feedback.textContent = ''; // Limpa o feedback anterior
+document.getElementById('cadastroForm').addEventListener('submit', function(e) {
+  e.preventDefault();
+  
+  const email = document.getElementById('email').value;
+  const senha = document.getElementById('senha').value;
+  const nome = document.getElementById('nome').value;
+  const telefone = document.getElementById('telefone').value;
+  const tipo = document.getElementById('tipo').value;
+  const dataHora = new Date().toLocaleString();
+  const feedback = document.getElementById('feedback');
+  feedback.textContent = ''; // Limpa o feedback anterior
 
-        if (senha.length < 6) {
-          feedback.textContent = 'A senha deve ter pelo menos 6 caracteres.';
-          return;
-        }
+  if (senha.length < 6) {
+    feedback.textContent = 'A senha deve ter pelo menos 6 caracteres.';
+    return;
+  }
 
-        firebase.auth().createUserWithEmailAndPassword(email, senha)
-          .then(userCredential => {
-            const userId = userCredential.user.uid;
-            const userData = {
-              email: email,
-              nome: nome,
-              telefone: telefone,
-              role: tipo,
-              progresso: tipo === 'aluno' ? {} : null,
-              dataHoraCadastro: dataHora
-            };
-            return db.ref('usuarios/' + userId).set(userData);
-          })
-          .then(() => {
-            alert("Usuário cadastrado com sucesso!");
-            location.reload(); // Recarrega a página após o cadastro
-          })
-          .catch(error => {
-            console.error("Erro ao cadastrar usuário:", error);
-            feedback.textContent = `Erro: ${error.message}`;
-          });
-      });
+  firebase.auth().createUserWithEmailAndPassword(email, senha)
+    .then(userCredential => {
+      const userId = userCredential.user.uid;
+      const userData = {
+        email: email,
+        nome: nome,
+        telefone: telefone,
+        role: tipo,
+        progresso: tipo === 'aluno' ? {} : null,
+        dataHoraCadastro: dataHora
+      };
+      return db.ref('usuarios/' + userId).set(userData);
+    })
+    .then(() => {
+      // Renovação do token do usuário atual após o cadastro
+      return firebase.auth().currentUser.getIdToken(true);
+    })
+    .then(() => {
+      alert("Usuário cadastrado com sucesso!");
+      location.reload(); // Recarrega a página após o cadastro
+    })
+    .catch(error => {
+      console.error("Erro ao cadastrar usuário:", error);
+      feedback.textContent = `Erro: ${error.message}`;
+    });
+});
 
-      // Função para buscar usuários por tipo
+
+        // Função para buscar usuários por tipo
       window.buscarUsuarios = function() {
         const filtroTipo = document.getElementById('filtroTipo').value;
 
