--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -5,7 +5,113 @@
   <title>Gerenciamento de Usuários</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    /* CSS padrão */
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f0f8ff;
+      color: #333;
+      text-align: center;
+    }
+
+    h1 {
+      color: #4CAF50;
+      margin-top: 20px;
+      font-size: 32px;
+    }
+
+    h2 {
+      color: #333;
+      font-size: 24px;
+      margin-top: 20px;
+    }
+
+    form, .unit-container, #progressoAluno {
+      background-color: #ffffff;
+      padding: 20px;
+      margin: 20px auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      text-align: left;
+    }
+
+    label {
+      display: block;
+      margin: 10px 0 5px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    input[type="email"], input[type="password"], input[type="text"], input[type="tel"], select {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 12px 20px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: background-color 0.3s ease;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    }
+
+    button:hover {
+      background-color: #45A049;
+    }
+
+    .back-button {
+      background-color: #3B82F6;
+      margin-top: 15px;
+    }
+
+    .back-button:hover {
+      background-color: #2F66B8;
+    }
+
+    .disabled {
+      background-color: #ccc;
+      color: #777;
+      cursor: not-allowed;
+    }
+
+    #feedback {
+      color: red;
+      font-weight: bold;
+    }
+
+    #resultados {
+      text-align: left;
+      max-width: 600px;
+      margin: auto;
+    }
+
+    .result-container {
+      background-color: #ffffff;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .result-container h3 {
+      color: #4CAF50;
+      font-size: 20px;
+    }
+
+    hr {
+      border: 0;
+      height: 1px;
+      background: #ddd;
+      margin: 20px 0;
+    }
   </style>
 </head>
 
@@ -112,27 +218,29 @@ document.getElementById('cadastroForm').addEventListener('submit', function(e) {
       return db.ref('usuarios/' + userId).set(userData);
     })
     .then(() => {
-      // Renovação do token do usuário atual após o cadastro
-      return firebase.auth().currentUser.getIdToken(true);
+      const currentUser = firebase.auth().currentUser;
+
+      // Reautenticar o usuário atual usando o token de autenticação
+      if (currentUser) {
+        return currentUser.getIdToken(true);
+      } else {
+        throw new Error("Não foi possível reautenticar o usuário.");
+      }
     })
     .then(() => {
-      alert("Usuário cadastrado com sucesso!");
-      location.reload(); // Recarrega a página após o cadastro
+      alert("Usuário cadastrado com sucesso e sessão reautenticada!");
+      document.getElementById('cadastroForm').reset();
+      buscarUsuarios(); // Atualiza a lista de usuários sem recarregar a página
     })
     .catch(error => {
-      console.error("Erro ao cadastrar usuário:", error);
+      console.error("Erro ao cadastrar ou reautenticar usuário:", error);
       feedback.textContent = `Erro: ${error.message}`;
     });
 });
 
-
-        // Função para buscar usuários por tipo
+      // Função para buscar usuários por tipo
       window.buscarUsuarios = function() {
         const filtroTipo = document.getElementById('filtroTipo').value;
-
-        // Força a reconexão ao Firebase para garantir atualização em tempo real
-        db.goOnline();
-
         db.ref('usuarios').once('value', snapshot => {
           const resultados = snapshot.val();
           let html = '';
