--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -187,56 +187,46 @@
       const db = firebase.database();
 
       // Função para cadastrar um novo usuário
-document.getElementById('cadastroForm').addEventListener('submit', function(e) {
-  e.preventDefault();
-  
-  const email = document.getElementById('email').value;
-  const senha = document.getElementById('senha').value;
-  const nome = document.getElementById('nome').value;
-  const telefone = document.getElementById('telefone').value;
-  const tipo = document.getElementById('tipo').value;
-  const dataHora = new Date().toLocaleString();
-  const feedback = document.getElementById('feedback');
-  feedback.textContent = ''; // Limpa o feedback anterior
+      document.getElementById('cadastroForm').addEventListener('submit', function(e) {
+        e.preventDefault();
+        
+        const email = document.getElementById('email').value;
+        const senha = document.getElementById('senha').value;
+        const nome = document.getElementById('nome').value;
+        const telefone = document.getElementById('telefone').value;
+        const tipo = document.getElementById('tipo').value;
+        const dataHora = new Date().toLocaleString();
+        const feedback = document.getElementById('feedback');
+        feedback.textContent = ''; // Limpa o feedback anterior
 
-  if (senha.length < 6) {
-    feedback.textContent = 'A senha deve ter pelo menos 6 caracteres.';
-    return;
-  }
+        if (senha.length < 6) {
+          feedback.textContent = 'A senha deve ter pelo menos 6 caracteres.';
+          return;
+        }
 
-  firebase.auth().createUserWithEmailAndPassword(email, senha)
-    .then(userCredential => {
-      const userId = userCredential.user.uid;
-      const userData = {
-        email: email,
-        nome: nome,
-        telefone: telefone,
-        role: tipo,
-        progresso: tipo === 'aluno' ? {} : null,
-        dataHoraCadastro: dataHora
-      };
-      return db.ref('usuarios/' + userId).set(userData);
-    })
-    .then(() => {
-      const currentUser = firebase.auth().currentUser;
-
-      // Reautenticar o usuário atual usando o token de autenticação
-      if (currentUser) {
-        return currentUser.getIdToken(true);
-      } else {
-        throw new Error("Não foi possível reautenticar o usuário.");
-      }
-    })
-    .then(() => {
-      alert("Usuário cadastrado com sucesso e sessão reautenticada!");
-      document.getElementById('cadastroForm').reset();
-      buscarUsuarios(); // Atualiza a lista de usuários sem recarregar a página
-    })
-    .catch(error => {
-      console.error("Erro ao cadastrar ou reautenticar usuário:", error);
-      feedback.textContent = `Erro: ${error.message}`;
-    });
-});
+        firebase.auth().createUserWithEmailAndPassword(email, senha)
+          .then(userCredential => {
+            const userId = userCredential.user.uid;
+            const userData = {
+              email: email,
+              nome: nome,
+              telefone: telefone,
+              role: tipo,
+              progresso: tipo === 'aluno' ? {} : null,
+              dataHoraCadastro: dataHora
+            };
+            return db.ref('usuarios/' + userId).set(userData);
+          })
+          .then(() => {
+            alert("Usuário cadastrado com sucesso!");
+            document.getElementById('cadastroForm').reset();
+            buscarUsuarios(); // Atualiza a lista após salvar ou editar
+          })
+          .catch(error => {
+            console.error("Erro ao cadastrar usuário:", error);
+            feedback.textContent = `Erro: ${error.message}`;
+          });
+      });
 
       // Função para buscar usuários por tipo
       window.buscarUsuarios = function() {
